# poly-affine-compress

./: .gitignore  .hd01.poly.swp  .hd07_opt.poly.swp  CLAUDE.md  GATES.md  README.md  analyze_anf.py  analyze_results.py  anf-simple.md  anf_factor.py  benchmark_anf.py  bool_anf.py  cavlc.txt  cavlc_opt1.poly  cavlc_opt2.poly  check_dec_strat1_sum.py  circuit_simplify.py  compute_degree.py  ctrl.txt  dec_opt1.poly  dec_opt2.poly  explore_ctrl.py  explore_ctrl_gl.py  explore_ctrl_gl_small.py  explore_ctrl_m_sub_n.py  explore_ctrl_merge.py  format_poly.py  hd01.poly  hd01_opt.txt  hd07_opt.poly  hd07_opt2.poly  hd08_opt.poly  int2float.txt  int2float_opt1.poly  logfile  optimize_depth2.py  optimize_depth3.py  process_all.py  process_cavlc.py  process_ctrl.py  (+6 more)
cpp/: .gitattributes  CMakeLists.txt  optimize_anf  optimize_anf_asan  optimize_anf_dbg  run_aes.sh  run_all.sh  run_batch.sh  run_complete.sh  run_n32.sh  time.cfg  update_results.py
cpp/bak/aes_bool/: aes_bool_d1a_opt1_stats.txt  aes_bool_d1a_opt1_verify.txt  aes_bool_d1b_opt2.affine  aes_bool_d1b_opt2.poly  aes_bool_d1b_opt2_stats.txt  aes_bool_d1b_opt2_verify.txt  aes_bool_d1c_opt2.affine  aes_bool_d1c_opt2.poly  aes_bool_d1c_opt2_stats.txt  aes_bool_d1c_opt2_verify.txt  aes_bool_d2_opt2.affine  aes_bool_d2_opt2.poly  aes_bool_d2_opt2_stats.txt
cpp/bak/results-2026-7-7-16-00/: results.md
cpp/bench/: bench_main.cpp
cpp/config/: paths.cfg
cpp/docs/: design.md  file_manifest.md  solution-anf-simplify.md  stats_definition.md  timeout_handling.md  例子.md
cpp/examples/: aes_bool.txt  cavlc.txt  cavlc_deep_expr.poly  cavlc_deep_verify.txt  cavlc_opt2_deep_opt2_T.poly  cavlc_opt2_deep_opt2_trans.poly  ctrl.txt  ctrl_deep_T.poly  ctrl_deep_expr.poly  ctrl_deep_trans.poly  ctrl_deep_verify.txt  hd02.txt  hd03.txt  hd08_deep_T.poly  hd08_deep_expr.poly  hd08_deep_trans.poly  hd08_deep_verify.txt  hd09.txt  hd10.txt  hd11.txt  hd12.txt  int2float_deep_trans.poly  int2float_deep_verify.txt  int2float_opt2_deep_opt2_T.poly  int2float_opt2_deep_opt2_trans.poly  result.md
cpp/examples/cavlc/: cavlc_opt1_expr.poly  cavlc_opt1_trans.poly  cavlc_opt2_T.poly  cavlc_opt2_expr.poly
cpp/examples/ctrl/: ctrl_opt1_T.poly  ctrl_opt1_expr.poly  ctrl_opt1_trans.poly  ctrl_opt2_expr.poly  ctrl_opt2_trans.poly
cpp/examples/dec/: dec_opt1_expr.poly  dec_opt2_T.poly  dec_opt2_expr.poly  process_dec.py
cpp/examples/dsort/: dsort.bak  dsort_opt1_T.poly  dsort_opt1_expr.poly
cpp/examples/hd01/: hd01_opt1_T.poly  hd01_opt1_expr.poly  hd01_opt1_trans.poly  hd01_opt2_T.poly  hd01_opt2_expr.poly  hd01_opt2_trans.poly
cpp/examples/hd02/: hd02_opt1_trans.poly  hd02_opt2_T.poly  hd02_opt2_trans.poly
cpp/examples/hd03/: hd03_opt1_expr.poly  hd03_opt1_trans.poly  hd03_opt2_T.poly  hd03_opt2_expr.poly  hd03_opt2_trans.poly
cpp/examples/hd04/: hd04_opt1_T.poly  hd04_opt1_expr.poly  hd04_opt1_trans.poly  hd04_opt2_expr.poly  process_hd04.py
cpp/examples/hd07/: hd07_opt1_expr.poly  hd07_opt2_trans.poly
cpp/examples/hd08/: hd08_opt1_T.poly  hd08_opt1_expr.poly  hd08_opt1_trans.poly
cpp/examples/hd09/: process_hd09.py
cpp/examples/hd10/: hd10_opt1_trans.poly  hd10_opt2_T.poly  hd10_opt2_expr.poly
cpp/examples/hd11/: hd11_opt1_T.poly  process_hd11.py
cpp/examples/hd12/: hd12_opt1_expr.poly  hd12_opt2_T.poly  hd12_opt_and.txt  process_hd12.py
cpp/examples/int2float/: int2float.txt  int2float_opt1_T.poly  int2float_opt1_trans.poly  int2float_opt2_trans.poly  process_int2float.py
cpp/examples/router/: process_router.py  router_opt1_T.poly  router_opt1_expr.poly
cpp/include/: affine.h  anf.h  circuit.h  gate_builder.h  gf2.h  gf2_linalg.h  int_poly.h  io.h  moebius.h  search.h  simplify.h  sparse_anf.h  truth_table.h  types.h  vector_anf.h  vector_int_poly.h  verify.h  walsh.h
cpp/preprocessed/aes_bool/: aes_bool.bij  aes_bool.eqn  aes_bool.poly  aes_bool.txt  aes_bool_nonlinear.txt  aes_bool_raw.poly  aes_bool_stats.txt
cpp/preprocessed/cavlc/: cavlc.bij  cavlc.eqn  cavlc.poly  cavlc_nonlinear.txt  cavlc_stats.txt
cpp/preprocessed/ctrl/: ctrl.bij  ctrl.eqn  ctrl.poly  ctrl_const.txt  ctrl_nonlinear.txt  ctrl_stats.txt
cpp/preprocessed/dec/: dec.bij  dec.eqn  dec.poly  dec_nonlinear.txt  dec_stats.txt
cpp/preprocessed/hd01/: hd01.bij  hd01.eqn  hd01_nonlinear.txt
cpp/preprocessed/hd02/: hd02.bij  hd02.eqn  hd02_affine.txt
cpp/preprocessed/hd03/: hd03.bij  hd03.eqn  hd03.poly  hd03_nonlinear.txt  hd03_stats.txt
cpp/preprocessed/hd04/: hd04.bij  hd04.eqn  hd04.poly  hd04_nonlinear.txt  hd04_stats.txt
cpp/preprocessed/hd07/: hd07.bij  hd07.eqn  hd07.poly  hd07_const.txt  hd07_nonlinear.txt  hd07_stats.txt
cpp/preprocessed/hd08/: hd08.bij  hd08.eqn  hd08.poly  hd08_nonlinear.txt
cpp/preprocessed/hd09/: hd09.bij  hd09.eqn  hd09_const.txt  hd09_nonlinear.txt
cpp/preprocessed/hd10/: hd10.bij  hd10.eqn  hd10_const.txt  hd10_stats.txt
cpp/preprocessed/hd11/: hd11.bij  hd11.eqn  hd11_const.txt  hd11_nonlinear.txt
cpp/preprocessed/hd12/: hd12.bij  hd12.eqn  hd12_const.txt  hd12_nonlinear.txt
cpp/preprocessed/int2float/: int2float.bij  int2float.eqn  int2float.poly  int2float_nonlinear.txt  int2float_stats.txt
cpp/results/: cavlc_T.poly  cavlc_trans.poly  cavlc_verify.txt  ctrl_T.poly  ctrl_expr.poly  ctrl_trans.poly  ctrl_verify.txt  dec_T.poly  dec_expr.poly  dec_trans.poly  dec_verify.txt  hd08_T.poly  hd08_expr.poly  hd08_trans.poly  hd08_verify.txt  int2float_T.poly  int2float_expr.poly  int2float_verify.txt
cpp/results/hd08/: hd08_d1a_opt.affine  hd08_d1a_opt.poly  hd08_d1a_opt_stats.txt  hd08_d1c_opt.affine  hd08_d1c_opt.poly  (+2 more)
cpp/scripts/: common.sh  poly2circuit.py
cpp/src/: affine.cpp  anf.cpp  circuit.cpp  compute_raw_anf.cpp  gate_builder.cpp  gf2.cpp  gf2_linalg.cpp  int_poly.cpp  io.cpp  main.cpp  main_gate_builder.cpp  main_large.cpp  main_opt1.cpp  main_opt2.cpp  main_sparse_g.cpp  moebius.cpp  optimize_anf.cpp  preprocess.cpp  search.cpp  simplify.cpp  sparse_anf.cpp  truth_table.cpp  vector_anf.cpp  vector_int_poly.cpp  verify.cpp  verify_anf.cpp  walsh.cpp
cpp/test/: test_main.cpp
(+611 files in other folders)
